<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/homeContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tenakata.tenakatapredictor.UI.Home.Home">

    <RelativeLayout
        android:id="@+id/imageLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/propertyImage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:foreground="#96222f3e"
            android:foregroundTintMode="src_atop"
            android:scaleType="fitXY"
            android:src="@drawable/tenakata" />

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/tenakata_uni"
            android:textColor="#ffff"
            android:textSize="20sp" />

        <View
            android:id="@+id/straight_line"
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:layout_below="@id/txt1"
            android:layout_marginTop="@dimen/layout_padding"
            android:layout_marginStart="50dp"
            android:background="@color/backColor" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/straight_line"
            android:layout_marginStart="50dp"
            android:layout_marginTop="@dimen/layout_padding"
            android:text="@string/dream"
            android:textColor="#ffff" />


    </RelativeLayout>

    <TextView
        android:id="@+id/txt_title"
        style="@style/Base.Widget.MaterialComponents.TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="sans-serif"
        android:text="@string/student_prediction_admission_list"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageLayout" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/marks_label_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/border_less_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_title"
        tools:layout_editor_absoluteY="187dp">

        <TextView
            android:id="@+id/txt_subject"
            android:layout_width="206dp"
            android:layout_height="wrap_content"
            android:text="@string/student_name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txt_marks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/txt_subject"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_subject" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/marks_label_layout"
        tools:listitem="@layout/admission_details" />




    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="8dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="8dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_file_download"
        android:contentDescription="@string/submit"
        android:backgroundTint="@color/backColor"
        android:layout_margin="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
